# bridge

./: .gitignore  LICENSE  MANIFESTO.md  README.md  bridgeconfig.yml  pyproject.toml  run.py
bridge_dsl/: __init__.py  compiler.py  config.py  parser.py
bridge_dsl/schema/: types.py
examples/: customer_churn.bridge
tests/: test_parser.py
