[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-dsl"
version = "0.1.0"
description = "A Human-AI Language for Shared Understanding"
authors = [{name = "Bridge Team"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "pylint>=2.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge_dsl*"]

[tool.black]
line-length = 88

[tool.pylint.messages_control]
disable = ["missing-docstring"]
